--- a/template/index.html
+++ b/template/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <title>Python Flask Bucket List App</title>
-
-
+    <link rel="shortcut icon" type="image/png" href="static/logo.png"/>
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link src="datepicker.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="/static/bootstrap-datepicker.js"></script>
 
 
 </head>
@@ -19,43 +20,35 @@
         <div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="#">Home</a>
-                    </li>
+                    <li><a class="btn btn-primary" href="/statistics" role="button">Estatística</a></li>
+                    <li><a class="btn btn-primary" href="/classify" role="button">Classificar</a></li>
                 </ul>
             </nav>
-            <h3 class="text-muted">PFC - Detecção de botnets</h3>
+            <div>
+              <img src="/static/logo.png" style="float: left;" height="60" width="52">
+              <h3 class="text-muted">PFC - Detecção de botnets</h3>
+            </div>
         </div>
-
-        <!-- <div class="jumbotron"> -->
-            <h2>Pesquisar:</h2>
-              <div class="col-md-4">
+          <br/>
+            <h3>Pesquisar:</h3>
+              <div >
                 <form class="form-inline a">
                   <div class="form-group">
-                    <label for="ip">endereço IP</label>
-                    <input type="text" class="form-control" id="ip" placeholder="192.168.0.1">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="model">Modelo</label>
-                    <input type="text" class="form-control" id="model" placeholder="RBot">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="date">Data</label>
-                    <input type="date" class="form-control" id="date">
+                    <input type="text" class="form-control" id="ip" placeholder="Endereço IP">
+                    <input type="text" class="form-control" id="model" placeholder="Modelo">
+                    <input type="text" class="input-append form-control datepicker" placeholder="Data" data-date-format="yyyy-MM-dd" id="date">
                   </div>
               </div>
             </p>
           <hr>
-            <br/><br/><br/>
+            <br/>
             <div class="col-md-6 col-md-offset-5">
-              <button type="button" class="btn btn-default" id="search">Buscar</button>
+              <button type="button" class="btn btn-primary" id="search">Buscar</button>
             </div>
         <!-- </div> -->
 
         <div class="row marketing">
             <div class="col-lg-12" id="tb">
-
             </div>
         </div>
 
@@ -69,32 +62,53 @@
                       var date = $('#date').val();
                       var model = $('#model').val();
                       var ip = $('#ip').val();
+                      console.log(date);
                       $.ajax({
                         url: '/search',
                         data: JSON.stringify({model: model, ip: ip, date: date}),
                         contentType: 'application/json;charset=UTF-8',
                         type: 'POST',
                         success: function(response) {
-                          console.log(response);
                           var values = $.parseJSON(response);
                           plotTable(values);
                         },
                         error: function(error) {
-                          console.log('tchaaaaaaau');
                           console.log(error);
                         }
                       });
                     };
+
+              $('.datepicker').datepicker();
            });
 
            function plotTable(values){
             $('#tb').append("<table class='table table-hover'><thead><tr><th>Data</th><th>endereço IP</th><th>Modelo</th></tr></thead><tbody id='records_table'></tbody></table>")
 
-             var trHTML = '';
-             $.each(values, function (i, item) {
-               trHTML += '<tr><td>' + item.date + '</td><td>' + item.addr + '</td><td>' + item.model + '</td></tr>';
-             });
-            $('#records_table').append(trHTML);
+            var size = values.length;
+            if(size <= 10){
+              var trHTML = '';
+              $.each(values, function (i, item) {
+                trHTML += '<tr><td>' + item.date + '</td><td>' + item.addr + '</td><td>' + item.model + '</td></tr>';
+              });
+             $('#records_table').append(trHTML);
+            }
+            else {
+              var pags = size / 10;
+              for(var i = 0; i < 10; i++) {
+                trHTML += '<tr><td>' + values[i].date + '</td><td>' + values[i].addr + '</td><td>' + values[i].model + '</td></tr>';
+              }
+              $('#records_table').append(trHTML);
+            }
+            $("#tb").append("<nav aria-label='Page navigation'><ul class='pagination'><li class='page-item'><a class='page-link' href='#' aria-label='Previous'><span aria-hidden='true'>"
+            + "&laquo;</span>"  +"<span class='sr-only'>Previous</span>" +'</a>' +'</li>' +
+            '<li class="page-item active"><a class="page-link" href="#">1<span class="sr-only">(current)</span></a></li>'+
+            '<li class="page-item"><a class="page-link" href="#">2</a></li>' +
+            '<li class="page-item"><a class="page-link" href="#">3</a></li>' +
+            '<li class="page-item"><a class="page-link" href="#">4</a></li>' +
+            '<li class="page-item"><a class="page-link" href="#" id="last">5</a></li>' +
+            '<li class="page-item">' +
+            '<a class="page-link" href="#" aria-label="Next" id="next">' + '<span aria-hidden="true">&raquo;</span>'+
+            '<span class="sr-only">Next</span>'+'</a>'+'</li>'+'</ul>'+'</nav>');
            }
         </script>
     </div>
