--- a/template/index.html
+++ b/template/index.html
@@ -21,7 +21,7 @@
             <nav>
                 <ul class="nav nav-pills pull-right">
                     <li><a class="btn btn-primary" href="/statistics" role="button">Estatística</a></li>
-                    <li><a class="btn btn-primary" href="/classify" role="button">Classificar</a></li>
+                    <li><a class="btn btn-primary" href="/loadnetflow" role="button">Carregar netflow</a></li>
                 </ul>
             </nav>
             <div>
