--- a/template/statistics.html
+++ b/template/statistics.html
@@ -34,7 +34,7 @@
             <nav>
                 <ul class="nav nav-pills pull-right">
                     <li><a class="btn btn-primary" href="/" role="button">Relatório</a></li>
-                    <li><a class="btn btn-primary" href="/classify" role="button">Classificar</a></li
+                    <li><a class="btn btn-primary" href="/loadnetflow" role="button">Carregar Netflow</a></li
                 </ul>
             </nav>
             <div>
