--- a/template/loadnetflow.html
+++ b/template/loadnetflow.html
@@ -31,12 +31,14 @@
         </div>
           <br/>
             <div >
-              <form class="form-inline a" action="/classify" method='post' enctype="multipart/form-data">
+              <form class="form-inline a" action="/loadnetflow" method='post' enctype="multipart/form-data">
                 <div class="form-group">
                   <input type="text" name="ip" placeholder="Endereço IP">
                   <input type="number" name="port" placeholder="Porta">
                   <input type="text" name="username" placeholder="Usuário">
                   <input type="password" name="password" placeholder="Senha">
+                  <input type="text" name="dbname" placeholder="database">
+                  <input type="file" name="file">
                   <button type="submit" class="btn btn-primary">Buscar</button>
                 </div>
             </div>
