--- a/template/classify.html
+++ b/template/classify.html
@@ -37,7 +37,7 @@
                   <input type="number" name="port" placeholder="Porta">
                   <input type="text" name="username" placeholder="Usuário">
                   <input type="password" name="password" placeholder="Senha">
-                  <button type="submit" class="btn btn-primary">Buscar</button>
+                  <button type="submit" class="btn btn-primary">Classificar</button>
                 </div>
             </div>
           </p>
