--- a/template/index.html
+++ b/template/index.html
@@ -37,6 +37,7 @@
                     <input type="text" class="form-control" id="ip" placeholder="Endereço IP">
                     <input type="text" class="form-control" id="model" placeholder="Modelo">
                     <input type="text" class="input-append form-control datepicker" placeholder="Data" data-date-format="yyyy-MM-dd" id="date">
+                    <input type="text" class="input-append form-control datepicker2" placeholder="Data" data-date-format="yyyy-MM-dd" id="date2">
                   </div>
               </div>
             </p>
@@ -60,17 +61,23 @@
                document.getElementById('search').onclick =
                    function () {
                       var date = $('#date').val();
+                      var date2 = $('#date2').val();
                       var model = $('#model').val();
                       var ip = $('#ip').val();
                       console.log(date);
                       $.ajax({
                         url: '/search',
-                        data: JSON.stringify({model: model, ip: ip, date: date}),
+                        data: JSON.stringify({model: model, ip: ip, date: date, endDate: date2}),
                         contentType: 'application/json;charset=UTF-8',
                         type: 'POST',
                         success: function(response) {
                           var values = $.parseJSON(response);
-                          plotTable(values);
+                          if($('.table').length == 0){
+                            plotTable(values, 1);
+                          } else {
+                            $('#elem').remove();
+                            plotTable(values, 1);
+                          }
                         },
                         error: function(error) {
                           console.log(error);
@@ -79,10 +86,12 @@
                     };
 
               $('.datepicker').datepicker();
+              $('.datepicker2').datepicker();
            });
 
-           function plotTable(values){
-            $('#tb').append("<table class='table table-hover'><thead><tr><th>Data</th><th>endereço IP</th><th>Modelo</th></tr></thead><tbody id='records_table'></tbody></table>")
+           function plotTable(values, index){
+            $('#tb').append('<div id="elem"></div>');
+            $('#elem').append("<table class='table table-hover'><thead><tr><th>Data</th><th>endereço IP</th><th>Modelo</th></tr></thead><tbody id='records_table'></tbody></table>")
 
             var size = values.length;
             if(size <= 10){
@@ -93,22 +102,31 @@
              $('#records_table').append(trHTML);
             }
             else {
-              var pags = size / 10;
-              for(var i = 0; i < 10; i++) {
+              var t = (parseInt(index)-1)*10;
+              for(var i = t; i < t + 10; i++) {
                 trHTML += '<tr><td>' + values[i].date + '</td><td>' + values[i].addr + '</td><td>' + values[i].model + '</td></tr>';
               }
               $('#records_table').append(trHTML);
             }
-            $("#tb").append("<nav aria-label='Page navigation'><ul class='pagination'><li class='page-item'><a class='page-link' href='#' aria-label='Previous'><span aria-hidden='true'>"
+            $("#elem").append("<nav aria-label='Page navigation'><ul class='pagination'><li class='page-item'><a class='page-link' href='#' aria-label='Previous'><span aria-hidden='true'>"
             + "&laquo;</span>"  +"<span class='sr-only'>Previous</span>" +'</a>' +'</li>' +
-            '<li class="page-item active"><a class="page-link" href="#">1<span class="sr-only">(current)</span></a></li>'+
-            '<li class="page-item"><a class="page-link" href="#">2</a></li>' +
-            '<li class="page-item"><a class="page-link" href="#">3</a></li>' +
-            '<li class="page-item"><a class="page-link" href="#">4</a></li>' +
-            '<li class="page-item"><a class="page-link" href="#" id="last">5</a></li>' +
+            '<li class="page-item active"><a class="page-link" id="first">' + parseInt(index) + '</a></li>'+
+            '<li class="page-item"><a class="page-link">' + (parseInt(index) + 1) + '</a></li>' +
+            '<li class="page-item"><a class="page-link">' + (parseInt(index) + 2 )+ '</a></li>' +
+            '<li class="page-item"><a class="page-link">' + (parseInt(index) + 3) + '</a></li>' +
+            '<li class="page-item"><a class="page-link" id="last">' + (parseInt(index) + 4) + '</a></li>' +
             '<li class="page-item">' +
             '<a class="page-link" href="#" aria-label="Next" id="next">' + '<span aria-hidden="true">&raquo;</span>'+
             '<span class="sr-only">Next</span>'+'</a>'+'</li>'+'</ul>'+'</nav>');
+
+            $('a.page-link').click(function(){
+              var clicked = $(this).text();
+              var active = $('#first').text();
+              if(clicked !== active){
+                $('#elem').remove();
+                plotTable(values, clicked);
+              }
+            });
            }
         </script>
     </div>
