--- a/template/index.html
+++ b/template/index.html
@@ -70,7 +70,7 @@
                       var connip = $('#connip').val();
                       var port = $('#port').val();
                       var username = $('#username').val();
-                      var passwprd = $('#password').val();
+                      var password = $('#password').val();
                       var dbname = $('#dbname').val();
                       var date = $('#date').val();
                       var date2 = $('#date2').val();
